Bug 617609 - Upvar analysis marks functions as NULL_CLOSURE incorrectly. r=brendan.